--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,4 +1,4 @@
-build_platform: {osx_arm64: osx_64}
+build_platform: {osx_arm64: osx_64, linux_ppc64le: linux_64, linux_aarch64: linux_64}
 conda_forge_output_validation: true
 provider: {linux_aarch64: default, linux_ppc64le: native}
 bot:
