MNT: Re-rendered with conda-build 24.5.0, conda-smithy 3.37.2, and conda-forge-pinning 2024.08.08.18.59.51

--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -17,7 +17,6 @@ jobs:
         CONFIG: linux_64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingtrue
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-<<<<<<< HEAD
         SHORT_CONFIG: linux_64_build_typedebugchannel_tar_hb1e295e48b
       linux_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse:
         CONFIG: linux_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse
@@ -29,29 +28,46 @@ jobs:
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
         SHORT_CONFIG: linux_64_build_typereleasechannel_t_h34a2b11c36
-=======
-        SHORT_CONFIG: linux_64_build_typereleasechannel_t_h0a44af7c38
-      linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debug:
-        CONFIG: linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debug
+      linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingfalse:
+        CONFIG: linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingfalse
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_aarch64_build_typedebugchanne_h4e1127e844
-      linux_aarch64_build_typereleasechannel_targetsconda-forge_main:
-        CONFIG: linux_aarch64_build_typereleasechannel_targetsconda-forge_main
+        SHORT_CONFIG: linux_aarch64_build_typedebugchanne_hcd952e3ae5
+      linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingtrue:
+        CONFIG: linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingtrue
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_aarch64_build_typereleasechan_hcde066807d
-      linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug:
-        CONFIG: linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug
+        SHORT_CONFIG: linux_aarch64_build_typedebugchanne_h7150c67285
+      linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse:
+        CONFIG: linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_ppc64le_build_typedebugchanne_he8193b4f7f
-      linux_ppc64le_build_typereleasechannel_targetsconda-forge_main:
-        CONFIG: linux_ppc64le_build_typereleasechannel_targetsconda-forge_main
+        SHORT_CONFIG: linux_aarch64_build_typereleasechan_h8869bfa667
+      linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingtrue:
+        CONFIG: linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingtrue
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-        SHORT_CONFIG: linux_ppc64le_build_typereleasechan_h12bca821c7
->>>>>>> 27ebc9fa08cd1ba6b821de8ae16e470d2264cbd3
+        SHORT_CONFIG: linux_aarch64_build_typereleasechan_ha683beff13
+      linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingfalse:
+        CONFIG: linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingfalse
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        SHORT_CONFIG: linux_ppc64le_build_typedebugchanne_hb135e7d82f
+      linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingtrue:
+        CONFIG: linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingtrue
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        SHORT_CONFIG: linux_ppc64le_build_typedebugchanne_hf259740f07
+      linux_ppc64le_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse:
+        CONFIG: linux_ppc64le_build_typereleasechannel_targetsconda-forge_mainfreethreadingfalse
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        SHORT_CONFIG: linux_ppc64le_build_typereleasechan_h86fdeaf373
+      linux_ppc64le_build_typereleasechannel_targetsconda-forge_mainfreethreadingtrue:
+        CONFIG: linux_ppc64le_build_typereleasechannel_targetsconda-forge_mainfreethreadingtrue
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+        SHORT_CONFIG: linux_ppc64le_build_typereleasechan_h50e932798a
   timeoutInMinutes: 360
   variables: {}
 
