--- a/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingyes.yaml
+++ b/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_mainfreethreadingyes.yaml
@@ -1,5 +1,7 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -10,12 +12,14 @@ c_stdlib:
 - sysroot
 c_stdlib_version:
 - '2.17'
+cdt_arch:
+- aarch64
 cdt_name:
 - cos7
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge main
 cxx_compiler:
 - gxx
 cxx_compiler_version:
@@ -25,7 +29,7 @@ docker_image:
 expat:
 - '2'
 freethreading:
-- 'true'
+- 'yes'
 libffi:
 - '3.4'
 libuuid:
@@ -45,7 +49,9 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-ppc64le
+- linux-aarch64
+tk:
+- '8.6'
 xz:
 - '5'
 zip_keys:
