--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,14 +8,14 @@ jobs:
     vmImage: windows-2022
   strategy:
     matrix:
-      win_64_freethreadingfalse:
-        CONFIG: win_64_freethreadingfalse
+      win_64_freethreadingno:
+        CONFIG: win_64_freethreadingno
         UPLOAD_PACKAGES: 'True'
-        SHORT_CONFIG: win_64_freethreadingfalse
-      win_64_freethreadingtrue:
-        CONFIG: win_64_freethreadingtrue
+        SHORT_CONFIG: win_64_freethreadingno
+      win_64_freethreadingyes:
+        CONFIG: win_64_freethreadingyes
         UPLOAD_PACKAGES: 'True'
-        SHORT_CONFIG: win_64_freethreadingtrue
+        SHORT_CONFIG: win_64_freethreadingyes
   timeoutInMinutes: 360
   variables:
     CONDA_BLD_PATH: D:\\bld\\
