--- a/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
+++ b/.ci_support/linux_aarch64_build_typedebugchannel_targetsconda-forge_python_debugfreethreadingno.yaml
@@ -1,3 +1,5 @@
+BUILD:
+- aarch64-conda_cos7-linux-gnu
 build_type:
 - debug
 bzip2:
@@ -10,6 +12,8 @@ c_stdlib:
 - sysroot
 c_stdlib_version:
 - '2.17'
+cdt_arch:
+- aarch64
 cdt_name:
 - cos7
 channel_sources:
@@ -25,7 +29,7 @@ docker_image:
 expat:
 - '2'
 freethreading:
-- 'false'
+- 'no'
 libffi:
 - '3.4'
 libuuid:
@@ -45,7 +49,7 @@ readline:
 sqlite:
 - '3'
 target_platform:
-- linux-64
+- linux-aarch64
 tk:
 - '8.6'
 xz:
