--- a/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingno.yaml
+++ b/.ci_support/osx_64_build_typereleasechannel_targetsconda-forge_mainfreethreadingno.yaml
@@ -3,7 +3,7 @@ MACOSX_DEPLOYMENT_TARGET:
 MACOSX_SDK_VERSION:
 - '11.0'
 build_type:
-- debug
+- release
 bzip2:
 - '1'
 c_compiler:
@@ -17,7 +17,7 @@ c_stdlib_version:
 channel_sources:
 - conda-forge/label/python_rc,conda-forge
 channel_targets:
-- conda-forge python_debug
+- conda-forge main
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
@@ -25,7 +25,7 @@ cxx_compiler_version:
 expat:
 - '2'
 freethreading:
-- 'true'
+- 'no'
 libffi:
 - '3.4'
 macos_machine:
