--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -15,8 +15,8 @@ channel_targets:
   - conda-forge main
   - conda-forge python_debug   # [not win]
 freethreading:
-  - true
-  - false
+  - yes
+  - no
 zip_keys:
   - build_type
   - channel_targets
