--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,8 @@
 # freethreading, set using conda_build_config.yaml
 {% if freethreading == "yes" %}
   {% set abi_tag = abi_tag + "t" %}
+{% else %}
+  {% set build_number = build_number + 100 %}
 {% endif %}
 
 package:
@@ -108,6 +110,10 @@ outputs:
         weak:
           - python_abi {{ ver2 }}.* *_cp{{ ver2nd }}
           - python {{ ver2 }}.* *_debug_cpython
+      track_features:
+{% if freethreading == "yes" %}
+        - py_freethreading
+{% endif %}
       script_env:
         - PY_INTERP_DEBUG={{ py_interp_debug }}
         - PY_FREETHREADING={{ freethreading }}
