--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,14 +23,12 @@
   {% set build_number = build_number + 100 %}
 {% endif %}
 
-{% set abi_tag_no_dbg = abi_tag %}
-
-{% set dbg_abi = "" %}
 {% if build_type == "debug" %}
   {% set py_interp_debug = "yes" %}
-  {% set abi_tag = abi_tag + "d" %}
+  {% set debug = "_debug" %}
 {% else %}
   {% set py_interp_debug = "no" %}
+  {% set debug = "" %}
 {% endif %}
 
 package:
@@ -105,12 +103,12 @@ outputs:
       skip: true  # [win and int(float(vc)) < 14]
       skip_compile_pyc:
         - '*.py'            # [build_platform != target_platform]
-      string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ abi_tag }}
+      string: {{ dev_ }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_{{ abi_tag }}
       run_exports:
         noarch:
           - python
         weak:
-          - python_abi {{ ver2 }}.* *_{{ abi_tag_no_dbg }}
+          - python_abi {{ ver2 }}.* *_{{ abi_tag }}
 {% if py_interp_debug == "yes" %}
           - python {{ ver2 }}.* *_{{ abi_tag }}
 {% endif %}
@@ -186,7 +184,7 @@ outputs:
 {% if dev != '' %}
         - _python_rc
 {% endif %}
-        - python_abi {{ ver2 }}.* *_{{ abi_tag_no_dbg }}
+        - python_abi {{ ver2 }}.* *_{{ abi_tag }}
     test:
       downstreams:
         - cython
@@ -268,7 +266,7 @@ outputs:
       script_env:
         - PY_INTERP_DEBUG={{ py_interp_debug }}
         - PY_FREETHREADING={{ freethreading }}
-      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ abi_tag }}
+      string: h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}{{ debug }}_{{ abi_tag }}
     requirements:
       build:
         - {{ compiler('c') }}
@@ -305,7 +303,7 @@ outputs:
       noarch: generic
     requirements:
       - python {{ version }}.*
-      - python_abi * *_{{ abi_tag_no_dbg }}
+      - python_abi * *_{{ abi_tag }}
 
   - name: cpython-freethreading
     build:
@@ -315,7 +313,7 @@ outputs:
 {% endif %}
     requirements:
       - python {{ version }}.*
-      - python_abi * *_{{ abi_tag_no_dbg }}
+      - python_abi * *_{{ abi_tag }}
 
   - name: cpython-nonfreethreading
     build:
@@ -325,7 +323,7 @@ outputs:
 {% endif %}
     requirements:
       - python {{ version }}.*
-      - python_abi * *_{{ abi_tag_no_dbg }}
+      - python_abi * *_{{ abi_tag }}
 
   - name: cpython-jit
     script: install_jit_activation.sh   # [not win]
