MNT: Re-rendered with conda-build 24.7.1, conda-smithy 3.39.1, and conda-forge-pinning 2024.09.09.18.43.05

--- a/.ci_support/win_64_.yaml
+++ b/.ci_support/win_64_.yaml
@@ -2,6 +2,8 @@ bzip2:
 - '1'
 c_compiler:
 - vs2017
+c_stdlib:
+- vs
 channel_sources:
 - conda-forge
 channel_targets:
@@ -27,4 +29,4 @@ tk:
 xz:
 - '5'
 zlib:
-- '1.2'
+- '1'
