Fix test and cleanup

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -229,8 +229,13 @@ outputs:
         - for f in ${CONDA_PREFIX}/lib/python*/_sysconfig*.py; do echo "Checking $f:"; if [[ `rg @[^@]*@ $f` ]]; then echo "FAILED ON $f"; cat $f; exit 1; fi; done  # [linux64 or osx]
         - test ! -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.a  # [unix]
         - test ! -f ${PREFIX}/lib/libpython${PKG_VERSION%.*}.nolto.a  # [unix]
-        - if not exist %PREFIX%\\libs\\python3.lib exit 1              # [win]
-        - if not exist %PREFIX%\\libs\\python3{{ ver2nd }}.lib exit 1  # [win]
+        {% if freethreading == "yes" %}
+        - if not exist %PREFIX%\\libs\\python3t.lib exit 1                # [win]
+        - if not exist %PREFIX%\\libs\\python{{ ver2nd }}t.lib exit 1     # [win]
+        {%e else %}
+        - if not exist %PREFIX%\\libs\\python3.lib exit 1                 # [win]
+        - if not exist %PREFIX%\\libs\\python{{ ver2nd }}.lib exit 1      # [win]
+        {% endif %}
         # https://github.com/conda-forge/python-feedstock/issues/384
         - if exist %PREFIX%\\Scripts\\pydoc exit 1  # [win]
         - if exist %PREFIX%\\Scripts\\idle exit 1  # [win]
