--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -232,7 +232,7 @@ outputs:
         {% if freethreading == "yes" %}
         - if not exist %PREFIX%\\libs\\python3t.lib exit 1                # [win]
         - if not exist %PREFIX%\\libs\\python{{ ver2nd }}t.lib exit 1     # [win]
-        {%e else %}
+        {% else %}
         - if not exist %PREFIX%\\libs\\python3.lib exit 1                 # [win]
         - if not exist %PREFIX%\\libs\\python{{ ver2nd }}.lib exit 1      # [win]
         {% endif %}
