--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 0 %}
+{% set build_number = 1 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -273,6 +273,8 @@ outputs:
         - TERM=xterm >/dev/null python -c "import curses; scr = curses.initscr(); curses.unget_wch('x'); assert 'x' ==  scr.get_wch()"  # [unix]
         # crypt module will be removed in 3.13 => this failing is a reminder to remove the libxcrypt dependency
         - python -c "import crypt"  # [unix]
+        # Test for https://docs.python.org/3/howto/perf_profiling.html#how-to-obtain-the-best-results
+        - python -m sysconfig | grep 'no-omit-frame-pointer'  # [linux]
 
   - name: libpython-static
     script: build_static.sh  # [unix]
